--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RPG</title>
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <div id="app"></div>
+
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
